--- a/app/components/newPost/newPost.template.html
+++ b/app/components/newPost/newPost.template.html
@@ -5,16 +5,17 @@
     <div class="content spaced">
         <form role="form">
                 <div class="input-field col s6">
-                    <input ng-model="title" type="text" class="validate" required>
+                    <input placeholder="Your title goes here" ng-model="$ctrl.form.title" type="text" class="validate" required>
                     <label for="last_name">Post Title</label>
                 </div>
                 <div class="input-field col s6">
-                        <textarea  ng-model="body" class="materialize-textarea" cols="30" rows="10"></textarea>
+                        <textarea  placeholder="Your post goes here" ng-model="$ctrl.form.body" class="materialize-textarea" cols="30" rows="10"></textarea>
                         <label for="textarea1">Textarea</label>
                 </div>
         </form>
     </div>
     <div class="btm">
+            <div class="waves-effect waves-light btn pink darken-1"  ng-click="$ctrl.clearPost()">Clear</div>
             <div class="waves-effect waves-light btn pink darken-1"  ng-click="$ctrl.savePost(title,body)">Add Post</div>
             <div class="waves-effect waves-light btn pink darken-1"  ng-click="$ctrl.persistPost(title,body)">Save Changes</div>
     </div>
